--- a/ServicuerosSA/Views/Lotes/Edit.cshtml
+++ b/ServicuerosSA/Views/Lotes/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 <h4>Lote</h4>
 <hr />
@@ -28,16 +28,7 @@
                 <input asp-for="Fechaingreso" class="form-control" />
                 <span asp-validation-for="Fechaingreso" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Peso" class="control-label"></label>
-                <input asp-for="Peso" class="form-control" />
-                <span asp-validation-for="Peso" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MedidaId" class="control-label"></label>
-                <select asp-for="MedidaId" class="form-control" asp-items="ViewBag.MedidaId"></select>
-                <span asp-validation-for="MedidaId" class="text-danger"></span>
-            </div>
+           
             <div class="form-group">
                 <label asp-for="PersonalId" class="control-label"></label>
                 <select asp-for="PersonalId" class="form-control" asp-items="ViewBag.PersonalId"></select>
@@ -54,14 +45,14 @@
                 <span asp-validation-for="Observaciones" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a lista</a>
 </div>
 
 @section Scripts {
