--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear una nueva </a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Descarnes.Cantidad)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.BodegaTripaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.BodegaTripaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.BodegaTripaId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.BodegaTripaId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.BodegaTripaId">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.BodegaTripaId">Eliminar</a>
             </td>
         </tr>
 }
