--- a/ServicuerosSA/Views/Bodegatripas/Details.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
-    <h4>Bodegatripa</h4>
+    <h4>Bodega tripa</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -32,5 +32,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.BodegaTripaId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a lista</a>
 </div>
