--- a/ServicuerosSA/Views/Bodegatripas/Edit.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Edit.cshtml
@@ -31,14 +31,14 @@
                 <span asp-validation-for="ClasificacionTripaId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guarda" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a lista</a>
 </div>
 
 @section Scripts {
