--- a/ServicuerosSA/Views/Formulas/Delete.cshtml
+++ b/ServicuerosSA/Views/Formulas/Delete.cshtml
@@ -6,9 +6,9 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>?</h3>
 <div>
-    <h4>Formula</h4>
+    <h4>Formulas</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -40,6 +40,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="FormulaId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Regresar a la lista</a>
     </form>
 </div>
