--- a/ServicuerosSA/Views/Pelambres/Create.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2>Crear</h2>
 
 <h4>Pelambre</h4>
 <hr />
@@ -35,7 +35,7 @@
                 <select asp-for="FormulaId" class ="form-control" asp-items="ViewBag.FormulaId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-default" />
             </div>
         </form>
     </div>
