--- a/ServicuerosSA/Views/Pelambres/Delete.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>?</h3>
 <div>
     <h4>Pelambre</h4>
     <hr />
@@ -32,9 +32,7 @@
         <dt>
             @Html.DisplayNameFor(model => model.Bombo)
         </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Bombo.Peso)
-        </dd>
+        
         <dt>
             @Html.DisplayNameFor(model => model.Formula)
         </dt>
@@ -45,7 +43,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="PelambreId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="eliminar" class="btn btn-default" /> |
+        <a asp-action="Index">Regresar a la lista</a>
     </form>
 </div>
