--- a/ServicuerosSA/Views/Shared/_Layout.cshtml
+++ b/ServicuerosSA/Views/Shared/_Layout.cshtml
@@ -58,6 +58,8 @@
                             <li class="divider"></li>
                             <li><a asp-area="" asp-controller="Descarnes" asp-action="Index">4.- Descarne</a></li>
                             <li class="divider"></li>
+                            <li><a asp-area="" asp-controller="ClasificacionTripas" asp-action="Index">5.-Clasificacion Tripa</a></li>
+                            <li class="divider"></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -74,6 +76,8 @@
                             <li><a asp-area="" asp-controller="Bombos" asp-action="Index">Bombos</a></li>
                             <li class="divider"></li>
                             <li><a asp-area="" asp-controller="Medidas" asp-action="Index">Medidas</a></li>
+                            <li class="divider"></li>
+                            <li><a asp-area="" asp-controller="BodegaTripas" asp-action="Index">Bodega Tripa</a></li>
                             <li class="divider"></li>
                         </ul>
                     </li>
