--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Descarne</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Ingreso de un nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -43,9 +43,9 @@
                 @Html.DisplayFor(modelItem => item.Pelambres.PelambreId)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.DescarneId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.DescarneId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.DescarneId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.DescarneId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.DescarneId">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.DescarneId">Eliminar</a>
             </td>
         </tr>
 }
