--- a/ServicuerosSA/Views/Bodegatripas/Create.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Crear</h2>
 
-<h4>Bodega Clasificacion TSripa</h4>
+<h4>Bodega Clasificacion Tripa</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
