--- a/ServicuerosSA/Views/Componentes/Create.cshtml
+++ b/ServicuerosSA/Views/Componentes/Create.cshtml
@@ -23,6 +23,11 @@
                 <span asp-validation-for="Porcentaje" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Cantidad" class="control-label"></label>
+                <input asp-for="Cantidad" class="form-control" />
+                <span asp-validation-for="Cantidad" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Tiempo" class="control-label"></label>
                 <input asp-for="Tiempo" class="form-control" />
                 <span asp-validation-for="Tiempo" class="text-danger"></span>
@@ -32,7 +37,7 @@
                 <select asp-for="MedidaId" class="form-control" asp-items="ViewBag.MedidaId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="FormulaId" class="control-label">Formula</label>
+                <label asp-for="FormulaId" class="control-label">Formula para el proceso de:</label>
                 <select asp-for="FormulaId" class="form-control" asp-items="ViewBag.FormulaId"></select>
             </div>
 
