--- a/ServicuerosSA/Views/Componentes/Edit.cshtml
+++ b/ServicuerosSA/Views/Componentes/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 <h4>Componente</h4>
 <hr />
@@ -24,6 +24,11 @@
                 <span asp-validation-for="Porcentaje" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Cantidad" class="control-label"></label>
+                <input asp-for="Cantidad" class="form-control" />
+                <span asp-validation-for="Cantidad" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Tiempo" class="control-label"></label>
                 <input asp-for="Tiempo" class="form-control" />
                 <span asp-validation-for="Tiempo" class="text-danger"></span>
@@ -39,14 +44,14 @@
                 <span asp-validation-for="MedidaId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a la Lista</a>
 </div>
 
 @section Scripts {
