--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -76,7 +76,7 @@
                         <label class="control-label">Observaciones</label>
                         <textarea id="observacion" name="observacion" class="form-control"></textarea>
                     </div>
-                    <table class="table">
+                    <table class="table" id="tablaPlambre">
                         <thead>
                             <tr>
                                 <th>
@@ -109,7 +109,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-primary" onclick="GuardaPelambre()">Guardar</button>
+                <!-- <button type="button" class="btn btn-primary" onclick="GuardaPelambre()">Guardar</button>-->
+                <button type="button" class="btn btn-primary" onclick="contardatos()">Contar</button>
             </div>
         </div>
     </div>
