--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Proceso en Pelambre</h2>
 <p>
     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoPelambre" onclick="ListaFormulas(); ListaBombos(); ListaPelambre(); listaTipoPiel(); listaClasificaciones(); listaPersonal()">Nuevo Proceso</a>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoPelambre" onclick="ListaFormulas()">Impresion</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#ImpresionPelambre">Impresion</a>
 </p>
 <table class="table">
     <thead>
@@ -192,8 +192,13 @@
                 
                 <div class="form-group">
                     <table class="table">
-                        <tr>PROCESO DE GESTION DE PRODUCCION</tr>
-                        <tr> LOGO </tr>
+                        <tr>
+                            <th>PROCESO DE GESTION DE PRODUCCION</th>
+                            <th>
+                            <th><a <img src=../img/eliminar.png width=20px height= 20px></a> </th>
+                        </tr>
+                        </table>
+                    <table>
                         <tr>
                             <th>CODIGO: <label id="codigo" class="control-label"></label></th>
                             <th>VERSION: <label id="version" class="control-label"></label></th>
@@ -206,23 +211,25 @@
                                 <th>
                                     TIPO PIEL: <label id="TipoPiel" class="control-label"> </label>
                                 </th>
+                             </tr>
+                            <tr>
                                 <th>
                                     FECHA: <label id="fecha" class="control-label"> </label>
                                 </th>
 
                                 <th>
-                                    PARADA:<label id="parada" class="control-label"></label>
+                                    PESO:<label id="parada" class="control-label"></label>
                                 </th>
-                                <th> BOMBO:<label id="bombo" class="control-label"></label> </th>
+                                <th> AUTORIZADO POR:<label id="bombo" class="control-label"></label> </th>
                             </tr>
                             <tr>
-                                <th>PESO: <label id="peso" class="control-label"></label></th>
+                                <th>PARADA: <label id="peso" class="control-label"></label></th>
                                 <th>CANTIDAD:<label id="cantidad" class="control-label"></label></th>
-                                <th>PROMEDIO:<label id="promedio" class="control-label"></label></th>
+                                <th>PROCESADO POR:<label id="promedio" class="control-label"></label></th>
                             </tr>
                             <tr>
-                                <th>AUTORIZADO POR:<label id="autorizado" class="control-label"></label></th>
-                                <th>PROCESADO POR:<label id="procesado" class="control-label"></label></th>
+                                <th>BOMBO:<label id="autorizado" class="control-label"></label></th>
+                                <th>PROMEDIO:<label id="procesado" class="control-label"></label></th>
                                 <th>ENTREGADO POR:<label id="entregado" class="control-label"></label></th>
                             </tr>
                         </thead>
