--- a/ServicuerosSA/Views/Shared/_Layout.cshtml
+++ b/ServicuerosSA/Views/Shared/_Layout.cshtml
@@ -79,6 +79,8 @@
                             <li class="divider"></li>
                             <li><a asp-area="" asp-controller="BodegaTripas" asp-action="Index">Bodega Tripa</a></li>
                             <li class="divider"></li>
+                            <li><a asp-area="" asp-controller="Tipobodegas" asp-action="Index">Tipo de Bodegas</a></li>
+                            <li class="divider"></li>
                         </ul>
                     </li>
                     <li class="dropdown">   
