--- a/ServicuerosSA/Views/Sexos/Edit.cshtml
+++ b/ServicuerosSA/Views/Sexos/Edit.cshtml
@@ -19,14 +19,14 @@
                 <span asp-validation-for="Detalle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Gurda" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
