--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -195,7 +195,8 @@
                         <tr>
                             <th>PROCESO DE GESTION DE PRODUCCION</th>
                             <th>
-                            <th><a <img src=../img/eliminar.png width=20px height= 20px></a> </th>
+                            <th> <img src="~/images/logo.jpg" />
+                            </th>
                         </tr>
                         </table>
                     <table>
