--- a/ServicuerosSA/Views/Formulas/Create.cshtml
+++ b/ServicuerosSA/Views/Formulas/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Crear nueva formula</h2>
+<h2>Create</h2>
 
-<h4></h4>
+<h4>Formula</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,23 +23,28 @@
                 <span asp-validation-for="Fecha_Creacion" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Version" class="control-label"></label>
+                <input asp-for="Version" class="form-control" />
+                <span asp-validation-for="Version" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="TipoProceso" class="control-label"></label>
                 <input asp-for="TipoProceso" class="form-control" />
                 <span asp-validation-for="TipoProceso" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TipoPielId" class="control-label">Tipo de Piel</label>
+                <label asp-for="TipoPielId" class="control-label"></label>
                 <select asp-for="TipoPielId" class ="form-control" asp-items="ViewBag.TipoPielId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Regresar a la lista de formulas</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
