--- a/ServicuerosSA/Views/Formulas/Delete.cshtml
+++ b/ServicuerosSA/Views/Formulas/Delete.cshtml
@@ -6,9 +6,9 @@
 
 <h2>Delete</h2>
 
-<h3>?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Formulas</h4>
+    <h4>Formula</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -22,6 +22,12 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Fecha_Creacion)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Version)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Version)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.TipoProceso)
@@ -40,6 +46,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="FormulaId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Regresar a la lista</a>
+        <a asp-action="Index">Back to List</a>
     </form>
 </div>
