--- a/ServicuerosSA/Views/Formulas/Edit.cshtml
+++ b/ServicuerosSA/Views/Formulas/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Editar</h2>
+<h2>Edit</h2>
 
 <h4>Formula</h4>
 <hr />
@@ -22,6 +22,11 @@
                 <label asp-for="Fecha_Creacion" class="control-label"></label>
                 <input asp-for="Fecha_Creacion" class="form-control" />
                 <span asp-validation-for="Fecha_Creacion" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Version" class="control-label"></label>
+                <input asp-for="Version" class="form-control" />
+                <span asp-validation-for="Version" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TipoProceso" class="control-label"></label>
