--- a/ServicuerosSA/Views/Formulas/Index.cshtml
+++ b/ServicuerosSA/Views/Formulas/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Formulas</h2>
+<h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Ingresar nueva formula</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -17,6 +17,9 @@
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Fecha_Creacion)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Version)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.TipoProceso)
@@ -37,15 +40,18 @@
                 @Html.DisplayFor(modelItem => item.Fecha_Creacion)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Version)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.TipoProceso)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.tipoPiel.Detalle)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.FormulaId">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.FormulaId">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.FormulaId">Eliminar</a>
+                <a asp-action="Edit" asp-route-id="@item.FormulaId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.FormulaId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.FormulaId">Delete</a>
             </td>
         </tr>
 }
