Ing. no puedo cambiar el tipo de letra

--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -191,51 +191,87 @@
             <div class="modal-body" id="impresion">
                 
                 <div class="form-group">
-                    <table class="table">
-                        <tr>
-                            <th>PROCESO DE GESTION DE PRODUCCION</th>
-                            <th>
-                            <th> <img src="~/images/logo.jpg" />
-                            </th>
-                        </tr>
-                        </table>
-                    <table>
-                        <tr>
-                            <th>CODIGO: <label id="codigo" class="control-label"></label></th>
-                            <th>VERSION: <label id="version" class="control-label"></label></th>
-                            <th>FECHA DE ACTUALIZACION: <label id="fecha" class="control-label"></label></th>
-                        </tr>
-                    </table>
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>
-                                    TIPO PIEL: <label id="TipoPiel" class="control-label"> </label>
-                                </th>
-                             </tr>
-                            <tr>
-                                <th>
-                                    FECHA: <label id="fecha" class="control-label"> </label>
-                                </th>
 
-                                <th>
-                                    PESO:<label id="parada" class="control-label"></label>
-                                </th>
-                                <th> AUTORIZADO POR:<label id="bombo" class="control-label"></label> </th>
-                            </tr>
-                            <tr>
-                                <th>PARADA: <label id="peso" class="control-label"></label></th>
-                                <th>CANTIDAD:<label id="cantidad" class="control-label"></label></th>
-                                <th>PROCESADO POR:<label id="promedio" class="control-label"></label></th>
-                            </tr>
-                            <tr>
-                                <th>BOMBO:<label id="autorizado" class="control-label"></label></th>
-                                <th>PROMEDIO:<label id="procesado" class="control-label"></label></th>
-                                <th>ENTREGADO POR:<label id="entregado" class="control-label"></label></th>
-                            </tr>
-                        </thead>
-                        <tbody id="LotesLista"></tbody>
+                    <table class="table table-bordered">
+                        <tr>
+                            <td class="auto-style79" rowspan="3">PROCESO DE GESTION DE PRODUCCION</td>
+                            <td colspan="2" rowspan="3">
+                                <img src="~/images/logo.jpg" style="width:75%"/>
+                            </td>
+                            <td class="auto-style96">CODIGO:</td>
+                            <td class="auto-style92" colspan="2"></td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style76">VERSIÓ:</td>
+                            <td class="auto-style47" colspan="2"></td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style27" colspan="2">FECHA DE ACTUALIZACION:</td>
+                            <td class="auto-style80"></td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style83" colspan="6">FORMULACION DE OPERACIÓN</td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style95" rowspan="3">FP-COFRNO/12</td>
+                            <td class="auto-style6" colspan="2" rowspan="3">
+                                <p>
+                                    <span class="auto-style78">
+                                        GUIA DE PROCESO PELAMBRE PIEL
+                                    </span>
+                                    <br class="auto-style78" />
+                                    <span class="auto-style78">FRESCA PELLITAL - BORRON DL</span>
+                                </p>
+                            </td>
+                            <td class="auto-style89">FECHA:</td>
+                            <td class="auto-style46" colspan="2"></td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style89">VIGENCIA:</td>
+                            <td class="auto-style90" colspan="2"></td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style76">PAGINA:</td>
+                            <td class="auto-style47" colspan="2"></td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style95">TIPO DE PIEL: </td>
+                            <td class="auto-style79">COSTEÑO</td>
+                            <td class="auto-style94" colspan="4">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style95">FECHA:</td>
+                            <td class="auto-style95">&nbsp;</td>
+                            <td class="auto-style95">PESO:</td>
+                            <td class="auto-style94">&nbsp;</td>
+                            <td class="auto-style95">AUTORIZADO POR:</td>
+                            <td class="auto-style74">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style95">PARADA:</td>
+                            <td class="auto-style95">&nbsp;</td>
+                            <td class="auto-style95">CANTIDAD:</td>
+                            <td class="auto-style94">&nbsp;</td>
+                            <td class="auto-style94">PROCESADO POR:</td>
+                            <td class="auto-style80">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style95">BOMBO:</td>
+                            <td class="auto-style95">&nbsp;</td>
+                            <td class="auto-style95">PROMEDIO:</td>
+                            <td class="auto-style94">&nbsp;</td>
+                            <td class="auto-style94">ENTREGADO POR:</td>
+                            <td class="auto-style74">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style82">INGREDIENTES</td>
+                            <td class="auto-style82">PORCENTAJE %</td>
+                            <td class="auto-style95">CANTIDAD</td>
+                            <td class="auto-style77">TIEMPO</td>
+                            <td class="auto-style42" colspan="2">OBSERVACIONES</td>
+                        </tr>
                     </table>
+                   
                 </div>
             </div>
             <div class="modal-footer">
