--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -110,8 +110,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                <!-- <button type="button" class="btn btn-primary" onclick="GuardaPelambre()">Guardar</button>-->
-                <button type="button" class="btn btn-primary" onclick="contardatos()">Contar</button>
+                <button type="button" class="btn btn-primary" onclick="GuardaPelambre()">Guardar</button>
+                
             </div>
         </div>
     </div>
