--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Proceso en Pelambre</h2>
 <p>
     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoPelambre" onclick="ListaFormulas(); ListaBombos(); ListaPelambre(); listaTipoPiel(); listaClasificaciones(); listaPersonal()">Nuevo Proceso</a>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#ImpresionPelambre">Impresion</a>
+    
 </p>
 <table class="table">
     <thead>
@@ -176,7 +176,6 @@
 </div>
 
 <div class="modal fade" id="ImpresionPelambre" tabindex="-1" role="dialog" aria-labelledby="EtiquetaModal">
-
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -277,7 +276,7 @@
                 </div>
                 <div class="form-group">
 
-                <table class="table table-bordered">
+                <table class="table table-bordered" id="tabla_formula_componente">
                     <tr>
                         <td style="font-size:x-small" > <input type="text" readonly/> </td>
                         <td style="font-size:x-small"><input type="text" readonly /></td>
