--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -7,7 +7,8 @@
 <h2>Proceso en Pelambre</h2>
 <p>
     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoPelambre" onclick="ListaFormulas(); ListaBombos(); ListaPelambre(); listaTipoPiel(); listaClasificaciones(); listaPersonal()">Nuevo Proceso</a>
-    
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#ImpresionPelambre">Impresion</a>
+
 </p>
 <table class="table">
     <thead>
@@ -277,13 +278,11 @@
                 <div class="form-group">
 
                 <table class="table table-bordered" id="tabla_formula_componente">
-                    <tr>
-                        <td style="font-size:x-small" > <input type="text" readonly/> </td>
-                        <td style="font-size:x-small"><input type="text" readonly /></td>
-                        <td style="font-size:x-small"><input type="text" readonly /></td>
-                        <td style="font-size:x-small"><input type="text" readonly /></td>
-                        <td style="font-size:x-small" colspan="2"><input type="text" readonly /></td>
-                    </tr>
+                    <thead>
+                        <tr>
+                            <th></th>
+                        </tr>
+                    </thead>
                 </table>
 
                 </div>
