--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -280,9 +280,14 @@
                 <table class="table table-bordered" id="tabla_formula_componente">
                     <thead>
                         <tr>
-                            <th></th>
+                            <th>Componente</th>
+                            <th>%</th>
+                            <th>Cantidad</th>
+                            <th>Tiempo</th>
+                            <th>Observaciones</th>
                         </tr>
                     </thead>
+                    <tbody id="TablaDetalleForula"></tbody>
                 </table>
 
                 </div>
