--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -271,7 +271,7 @@
                 </div>
                 <div class="form-group">
 
-                <table class="table table-bordered" id="tabla_formula_componente">
+                <table class="table table-bordered" >
                     <thead>
                         <tr>
                             <th>Componente</th>
