--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -198,7 +198,7 @@
                             <td colspan="2" rowspan="3">
                                 <img src="~/images/logo.jpg" style="width:75%" />
                             </td>
-                            <td style="font-size:xx-small">CODIGO: <label id="codigo" name="codigo" class="control-label"></label></td>
+                            <td style="font-size:xx-small">CODIGO:</td>
                             <td colspan="2"><label id="codigo" name="codigo" class="control-label"></label></td>
                         </tr>
                         <tr>
