--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -214,9 +214,7 @@
                         </tr>
                         <tr>
                             <td style="font-size:smaller" rowspan="3">
-                                FP-COFRNO/12: <label id="nombre_formul" name="nombre_formula"
-                                                     class="control-label"></label>
-                            </td>
+                                FP-COFRNO/12 </td>
                             <td colspan="2" rowspan="3">
                                 <label id="guia" name="guia" class="control-label"></label>
                                 <p>
