--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -216,8 +216,7 @@
                             <td style="font-size:smaller" rowspan="3">
                                 FP-COFRNO/12 </td>
                             <td colspan="2" rowspan="3">
-                                <label id="guia" name="guia" class="control-label"></label>
-                                <p>
+                                   <p>
                                     <span style="font-size:x-small">
                                         GUIA DE PROCESO PELAMBRE PIEL FRESCA PELLITAL - BORRON DL
                                     </span>
@@ -228,7 +227,7 @@
                         </tr>
                         <tr>
                             <td style="font-size:xx-small">VIGENCIA:</td>
-                            <td style="font-size:xx-small" colspan="2"><label id="vigencia" name="vigencia" class="control-label"></label></td>
+                            <td style="font-size:xx-small" colspan="2"></td>
                         </tr>
                         <tr>
                             <td style="font-size:xx-small">PAGINA:</td>
@@ -236,12 +235,12 @@
                         </tr>
                         <tr>
                             <td style="font-size:xx-small">TIPO DE PIEL: </td>
-                            <td style="font-size:xx-small"><label id="tipo_piel" name="tipo_piel" class="control-label"></label></td>
+                            <td style="font-size:xx-small"><label id="tipoPiel" name="tipoPiel" class="control-label"></label></td>
                             <td style="font-size:xx-small" colspan="4">&nbsp;</td>
                         </tr>
                         <tr>
                             <td style="font-size:x-small">FECHA:</td>
-                            <td style="font-size:x-small">&nbsp;<label id="fecha" name="fecha" class="control-label"></label></td>
+                            <td style="font-size:x-small">&nbsp;<label id="fechaImpresion" name="fechaImpresion" class="control-label"></label></td>
                             <td style="font-size:x-small">PESO:</td>
                             <td style="font-size:x-small">&nbsp;<label id="peso" name="peso" class="control-label"></label></td>
                             <td style="font-size:xx-small">AUTORIZADO POR:</td>
