--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -189,9 +189,9 @@
                 </h4>
             </div>
             <div class="modal-body" id="impresion">
-
+                
                 <div class="form-group">
-
+                    <div id="aereaImprimir"></div>
                     <table class="table table-bordered">
                         <tr>
                             <td style="font-size:smaller" rowspan="3">PROCESO DE GESTION DE PRODUCCION</td>
@@ -214,9 +214,10 @@
                         </tr>
                         <tr>
                             <td style="font-size:smaller" rowspan="3">
-                                FP-COFRNO/12 </td>
+                                FP-COFRNO/12
+                            </td>
                             <td colspan="2" rowspan="3">
-                                   <p>
+                                <p>
                                     <span style="font-size:x-small">
                                         GUIA DE PROCESO PELAMBRE PIEL FRESCA PELLITAL - BORRON DL
                                     </span>
@@ -261,7 +262,7 @@
                             <td style="font-size:xx-small">ENTREGADO POR:</td>
                             <td style="font-size:xx-small">&nbsp;<label id="entregado" name="entregado" class="control-label"></label></td>
                         </tr>
-                       
+
                     </table>
 
                 </div>
