--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -1,53 +1,73 @@
-﻿@model IEnumerable<ServicuerosSA.Models.Descarne>
-
+﻿
 @{
     ViewData["Title"] = "Index";
 }
 
-<h2>Descarne</h2>
-
+<h2>Proceso en Descarne</h2>
 <p>
-    <a asp-action="Create">Ingreso de un nuevo</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoDescarne" onclick="ListaPelambre();">Nuevo Proceso</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Cantidad)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Fecha)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Activo)
-                </th>
             <th>
-                @Html.DisplayNameFor(model => model.Pelambres)
+                Pelambres
             </th>
+            <th>
+                Cantidad
+            </th>
+            <th>
+                Fecha
+            </th>
+            <th>
+                Activo
+            </th>
+
             <th></th>
         </tr>
     </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cantidad)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fecha)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Activo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Pelambres.PelambreId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.DescarneId">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.DescarneId">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.DescarneId">Eliminar</a>
-            </td>
-        </tr>
-}
-    </tbody>
+    <tbody id="descarne"> </tbody>
 </table>
+<div class="modal fade" id="IngresoDescarne" tabindex="-1" role="dialog" aria-labelledby="EtiquetaModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close"
+                        data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title"
+                    id="EtiquetaModal">
+                    Ingreso de Proceso Descarne
+                </h4>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label class="control-label">Numero de pieles en Pelambre</label>
+                        <label id="fecha" name="fecha" class="control-label"></label>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Numero de pieles a Descarne</label>
+                        <input id="descarne" name="descarne" required class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Fecha</label>
+                        <label id="fecha" name="fecha" class="control-label"></label>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Activo</label>
+                        <label id="activo" name="fecha" class="control-label"></label>
+                    </div>
+
+                  </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary" onclick="GuardaPelambre()">Guardar</button>
+
+            </div>
+        </div>
+    </div>
+</div>
+
