--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -46,14 +46,17 @@
                     <div class="form-group">
                         <label class="control-label">Numero de pieles en Pelambre</label>
                         <label id="fecha" name="fecha" class="control-label"></label>
+                        <input id="descarne" name="descarne" required class="form-control">
                     </div>
                     <div class="form-group">
                         <label class="control-label">Numero de pieles a Descarne</label>
                         <input id="descarne" name="descarne" required class="form-control">
+
                     </div>
                     <div class="form-group">
                         <label class="control-label">Fecha</label>
                         <label id="fecha" name="fecha" class="control-label"></label>
+                        <input id="descarne" name="descarne" required class="form-control">
                     </div>
                     <div class="form-group">
                         <label class="control-label">Activo</label>
