--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -287,7 +287,6 @@
                 </table>
 
                 </div>
-
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -295,4 +294,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
