--- a/ServicuerosSA/Views/Componentes/Create.cshtml
+++ b/ServicuerosSA/Views/Componentes/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Crear nuevo componente</h2>
+<h2>Create</h2>
 
-<h4></h4>
+<h4>Componente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -22,30 +22,28 @@
                 <input asp-for="Porcentaje" class="form-control" />
                 <span asp-validation-for="Porcentaje" class="text-danger"></span>
             </div>
-           
             <div class="form-group">
                 <label asp-for="Tiempo" class="control-label"></label>
                 <input asp-for="Tiempo" class="form-control" />
                 <span asp-validation-for="Tiempo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MedidaId" class="control-label">Medida</label>
-                <select asp-for="MedidaId" class="form-control" asp-items="ViewBag.MedidaId"></select>
+                <label asp-for="FormulaId" class="control-label"></label>
+                <select asp-for="FormulaId" class ="form-control" asp-items="ViewBag.FormulaId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="FormulaId" class="control-label">Formula para el proceso de:</label>
-                <select asp-for="FormulaId" class="form-control" asp-items="ViewBag.FormulaId"></select>
+                <label asp-for="MedidaId" class="control-label"></label>
+                <select asp-for="MedidaId" class ="form-control" asp-items="ViewBag.MedidaId"></select>
             </div>
-
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Regresar a la lista de componentes</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
