--- a/ServicuerosSA/Views/Componentes/Index.cshtml
+++ b/ServicuerosSA/Views/Componentes/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Componentes</h2>
+<h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Ingresar nuevo componente</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.formula.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ComponenteId">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.ComponenteId">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.ComponenteId">Eliminar</a>
+                <a asp-action="Edit" asp-route-id="@item.ComponenteId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.ComponenteId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.ComponenteId">Delete</a>
             </td>
         </tr>
 }
