--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Proceso en Descarne</h2>
 <p>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoDescarne" onclick="ListaPelambre();">Nuevo Proceso</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoDescarne" onclick="ListaPelambre(); listaPersonal();">Nuevo Proceso</a>
 </p>
 <table class="table">
     <thead>
@@ -45,8 +45,7 @@
                 <form>
                     <div class="form-group">
                         <label class="control-label">Numero de pieles en Pelambre</label>
-                        <label id="fecha" name="fecha" class="control-label"></label>
-                        <input id="descarne" name="descarne" required class="form-control">
+                        <input id="descarne" name="descarne" readonly class="form-control">
                     </div>
                     <div class="form-group">
                         <label class="control-label">Numero de pieles a Descarne</label>
@@ -55,8 +54,7 @@
                     </div>
                     <div class="form-group">
                         <label class="control-label">Fecha</label>
-                        <label id="fecha" name="fecha" class="control-label"></label>
-                        <input id="descarne" name="descarne" required class="form-control">
+                        <input id="descarne" name="descarne" readonly class="form-control">
                     </div>
                     <div class="form-group">
                         <label class="control-label">Activo</label>
