--- a/ServicuerosSA/Views/Descarnes/Create.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Create.cshtml
@@ -11,7 +11,13 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Pelambres" class="control-label">Lista Del Pelambre</label>
+                <select asp-for="PelambreId" class="form-control" asp-items="ViewBag.PelambreId"></select>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Cantidad" class="control-label"></label>
                 <input asp-for="Cantidad" class="form-control" />
@@ -29,10 +35,7 @@
                     </label>
                 </div>
             </div>
-            <div class="form-group">
-                <label asp-for="PelambreId" class="control-label"></label>
-                <select asp-for="PelambreId" class ="form-control" asp-items="ViewBag.PelambreId"></select>
-            </div>
+
             <div class="form-group">
                 <input type="submit" value="Crear" class="btn btn-default" />
             </div>
