--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Proceso en Descarne</h2>
 <p>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoDescarne" onclick="ListaPelambre(); listaPersonal();">Nuevo Proceso</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoDescarne" onclick="ListaPelambre(); listaPersonal(); Listapelambre();">Nuevo Proceso</a>
 </p>
 <table class="table">
     <thead>
@@ -44,6 +44,14 @@
             <div class="modal-body">
                 <form>
                     <div class="form-group">
+                        <label class="control-label">Lotes en Pelambre</label>
+                        <select id="bomboId" name="bomboId" required class="form-control">
+                            <option value="0">Seleccione una lo que desea descarnar</option>
+                        </select>
+                        <label id="mensajeb" class="col-md-2 control-label label-danger"></label>
+
+                    </div>
+                    <div class="form-group">
                         <label class="control-label">Numero de pieles en Pelambre</label>
                         <input id="descarne" name="descarne" readonly class="form-control">
                     </div>
@@ -61,7 +69,7 @@
                         <label id="activo" name="fecha" class="control-label"></label>
                     </div>
 
-                  </form>
+                </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
